With stable face_recognition, april 22

--- a/app/src/main/res/layout/activity_enter_password.xml
+++ b/app/src/main/res/layout/activity_enter_password.xml
@@ -5,30 +5,26 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-    <EditText
-        android:id="@+id/getPass"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:ems="10"
-        android:inputType="textPersonName"
-        android:text=""
-        android:hint="Password"
-        app:layout_constraintBottom_toBottomOf="parent"
+    <androidx.camera.view.PreviewView
+        android:id="@+id/captureFace"
+        android:layout_width="288dp"
+        android:layout_height="465dp"
+        android:layout_marginTop="104dp"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.497"
+        app:layout_constraintHorizontal_bias="0.495"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.422" />
+        app:layout_constraintTop_toTopOf="parent" />
 
     <Button
-        android:id="@+id/buttonPass"
+        android:id="@+id/faceUnlock"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Enter"
+        android:layout_marginBottom="68dp"
+        android:text="Unlock"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="@+id/getPass"
-        app:layout_constraintStart_toStartOf="@+id/getPass"
-        app:layout_constraintTop_toBottomOf="@+id/getPass"
-        app:layout_constraintVertical_bias="0.089" />
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.498"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/captureFace" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
