--- a/app/src/main/res/layout/fragment_setup_owner.xml
+++ b/app/src/main/res/layout/fragment_setup_owner.xml
@@ -5,7 +5,6 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".ui.initialRun.SetupOwnerFragment">
-
     <TextView
         android:id="@+id/textView13"
         android:layout_width="360dp"
@@ -119,5 +118,17 @@
         app:layout_constraintHorizontal_bias="0.508"
         app:layout_constraintStart_toStartOf="@+id/btnOwnerRegisterFace"
         app:layout_constraintTop_toBottomOf="@+id/btnOwnerRegisterFace" />
+
+
+    <Button
+        android:id="@+id/StoragePermission"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Enable Permission"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.855" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
