ap24 add threshold

--- a/app/src/main/res/layout/fragment_monitor.xml
+++ b/app/src/main/res/layout/fragment_monitor.xml
@@ -11,7 +11,7 @@
         android:id="@+id/textView12"
         android:layout_width="330dp"
         android:layout_height="wrap_content"
-        android:fontFamily="@font/roboto_slab"
+
         android:gravity="center"
         android:text="Make sure to enable the camera permission to record any suspicious activities"
         android:textSize="15sp"
@@ -26,7 +26,7 @@
         android:id="@+id/btnEnableCamera"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:fontFamily="@font/roboto_slab"
+
         android:gravity="center"
         android:text="Enable Camera Permission"
         android:textSize="14sp"
@@ -41,7 +41,7 @@
         android:id="@+id/btnAccessRecords"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:fontFamily="@font/roboto_slab"
+
         android:gravity="center"
         android:text="Show All Monitoring Records"
         android:textSize="14sp"
@@ -50,6 +50,19 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.594" />
+
+    <TextView
+        android:id="@+id/optimalThreshold"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text=""
+        android:textSize="20sp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.498"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/btnAccessRecords"
+        app:layout_constraintVertical_bias="0.302" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
